[package]
name = "backend"
version = "0.1.0"
authors = ["Albert Safin <xzfcpw@gmail.com>"]

[dependencies]
base64 = "0.10"
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
juniper = "0.11"
juniper_rocket = "0.2"
postgres = { version = "0.15", features = ["with-chrono"] }
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]
