[package]
name = "backend"
version = "0.1.0"
authors = ["Albert Safin <xzfcpw@gmail.com>"]

[dependencies]
base64 = "0.10"
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
jpeg-decoder = "0.1"
png = "0.14"
postgres = { version = "0.15", features = ["with-chrono"] }
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
tempfile = "3.0"

[dependencies.multipart]
version = "0.16"
default-features = false
features = ["mock", "rocket", "server"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]
