[package]
name = "backend"
version = "0.1.0"
authors = ["Albert Safin <xzfcpw@gmail.com>"]

[dependencies]
base64 = "0.11.0"
chrono = "0.4.10"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
jpeg-decoder = "0.1.18"
png = "0.15.3"
postgres = "0.17.1"
rocket = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sha2 = "0.8.1"
tempfile = "3.1.0"

[dependencies.multipart]
version = "0.16.1"
default-features = false
features = ["mock", "rocket", "server"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]
